# carwash-server/ruoyi-wash/wash-order/src/main/java/com/ruoyi/wash/order/dto/CreateOrderRequest.java
@@ -14,6 +14,7 @@ public record CreateOrderRequest(
         Boolean pickupRequired,
         String remark,
         List<String> parkPhotoFileIds,
-        Boolean agreed
+        Boolean agreed,
+        Long couponUserId
 ) {
 }
